After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782968 - size-change signal is not emitted when tiling
size-change signal is not emitted when tiling
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks: 766685
 
 
Reported: 2017-05-22 20:44 UTC by Alessandro Bono
Modified: 2017-05-24 07:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Notify about size-change when tiling (1.08 KB, patch)
2017-05-22 20:45 UTC, Alessandro Bono
none Details | Review
window: Notify about size-change when tiling (1.49 KB, patch)
2017-05-23 14:41 UTC, Alessandro Bono
committed Details | Review

Description Alessandro Bono 2017-05-22 20:44:23 UTC
The signal emission is required in order to animate the tiling action (see bug 766685).
Comment 1 Alessandro Bono 2017-05-22 20:45:36 UTC
Created attachment 352381 [details] [review]
window: Notify about size-change when tiling
Comment 2 Jonas Ådahl 2017-05-23 01:56:33 UTC
Review of attachment 352381 [details] [review]:

This seems reasonable to me, but it needs a commit message, describing the change, including the reason why 'tiling' should be considered a 'maximize' change.

::: src/core/window.c
@@ +2904,3 @@
   meta_screen_update_tile_preview (window->screen, FALSE);
 
+  MetaRectangle old_frame_rect, old_buffer_rect;

style nit: Variable declarations on top
Comment 3 Alessandro Bono 2017-05-23 14:41:56 UTC
Created attachment 352430 [details] [review]
window: Notify about size-change when tiling

Call meta_compositor_size_change_window while tiling in order
to emit the size-change signal. Since the untiling action is
considered a unmaximize size change, treat tiling as a maximize
size change for consistency.
Comment 4 Jonas Ådahl 2017-05-24 04:26:12 UTC
Review of attachment 352430 [details] [review]:

lgtm.
Comment 5 Alessandro Bono 2017-05-24 07:52:25 UTC
Attachment 352430 [details] pushed as 270da95 - window: Notify about size-change when tiling